# LeoVegasChurn

./: .gitattributes  .gitignore  LeoVegasChurn.code-workspace  find_large_files.py  pyproject.toml
.virtual_documents/notebooks/: Churn model.ipynb  Data exploration EDA.ipynb
README/: Assignment.md  TODO.md
README/INSTALLATION/: Installed_libraries.md  python environment.md
configs/: __init__.py  config.yaml
configs/models/: regression.yaml
notebooks/: Churn model.ipynb
src/CV/: CV.py  anomaly_detection.py  classification.py  clustering.py  deep_learning.py  recommendation.py  regression.py  regression_compute_metrics.py  time_series.py
src/EDA/: EDA.py  dates.py  eda_on_dates.py  outlier_detection.py
src/ETL/: ETL_pickle.py  etl.py
src/FE/: FE.py  date_features.py  dimentionality_reduce.py  dummify.py  encoding.py  normalize.py
src/config/: load_config.py
src/data_prep/: add_date_range_columns.py  calculate_churn.py  calculate_duration.py  change_variable_format.py  classify_columns.py  convert_birth_year_to_datetime.py  count_id_occurancies.py  data_prep.py  identify_cols.py  integers_to_float.py  missing_values.py  split_data.py  string_to_datetime.py
src/data_quality/: quality.py
src/feature_store/: feature_registration.py
src/mlflow_logging/: regression.py
src/pipelines/: distro_pipeline.py  distro_pipeline_NOCV.py  distro_pipeline_lightgbm.py  metaflow_pipeline.py  pipeline_v1.py  pipeline_v2.py
src/split_data_training/: split_data_training.py
src/train/: model_select.py  train.py
src/utils/: copy_paste_file.py  (+1 more)
(+76 files in other folders)
