[project]
name = "leovegaschurn"
version = "0.1.0"
description = ""
authors = [
    {name = "akachrimanis",email = "akachrimanis@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "configparser (>=7.1.0,<8.0.0)",
    "joblib (>=1.4.2,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "scikit-learn (>=1.5.0,<2.0.0)",
    "scikit-survival (>=0.23.1,<0.24.0)",
    "lifelines (>=0.30.0,<0.31.0)",
    "jupyterlab (>=4.3.5,<5.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "jupyterlab-lsp (>=5.1.0,<6.0.0)",
    "python-lsp-server[all] (>=1.12.2,<2.0.0)",
    "sweetviz (>=2.3.1,<3.0.0)",
    "lux-api (>=0.5.1,<0.6.0)",
    "autoviz (>=0.1.905,<0.2.0)",
    "missingno (>=0.5.2,<0.6.0)",
    "qgrid (>=1.3.1,<2.0.0)",
    "nbstripout (>=0.8.1,<0.9.0)",
    "nbdime (>=4.0.2,<5.0.0)",
    "mlflow (>=2.20.1,<3.0.0)",
    "itables (>=2.2.4,<3.0.0)",
    "ydata-profiling (>=4.12.2,<5.0.0)",
    "feast (>=0.45.0,<0.46.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "dask (>=2025.1.0,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
colorlog = "^6.9.0"
werkzeug = "^3.1.3"

[tool.poetry]
packages = [
    { include = ".src", from = "src" }
]